# generative-ai-infrastructure

./: .gitignore  LICENSE  README.md
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/: business_logic.py  config.py  handlers.py  main.py  models.py  otel.py  pulsar_schemas.py  pulsar_utils.py  repository.py
api/tests/: mocks.py  test_routes.py
api/tests/integration/: test_generate_image_route.py  test_get_all_images_route.py  test_get_image_by_id_route.py
generation_worker_diffusers/: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  download_hf_models.py  index_models_util.py  pyproject.toml  sample_image.py  sample_rpc_client.py
generation_worker_diffusers/src/: diffusers.py  index_models_util.py  main.py  rpc_client.py  sample_image.py  settings.py  stable_diffusion.py  utils.py
generation_worker_diffusers/tests/: test_generation.py
generation_worker_sidecar/: .dockerignore  .gitignore  .pylintrc  .python-version  Dockerfile  README.md  delete-all-topics.sh  pulsar_client.py  pulsar_mgmt.py  pyproject.toml
generation_worker_sidecar/src/: config.py  main.py  models.py  otel.py  pulsar_schemas.py  pulsar_utils.py  sd_generation.py  topics.py  utils.py
generation_worker_sidecar/src/stable_diffusion/: diffusers.py
generation_worker_sidecar/src/stable_diffusion_generators/: abstract_stable_diffusion_generator.py  diffusers.py
generation_worker_sidecar/tests/: producer.py  pulsar_admin_utils.py  test_main.py  test_sd.py  test_send_req.py  test_smoke.py
generation_worker_sidecar/tests/unit/: test_is_operational.py
infrastructure/: gen-ai-namespace.yaml
infrastructure/deploy_eks_cluster/: .gitignore  main.tf
infrastructure/infra_tests/: README.md  pyproject.toml
infrastructure/infra_tests/locust/: load_test.py
infrastructure/infra_tests/tests/: test_infra.py
infrastructure/manifests/: api-deployment.yaml  api-service.yaml  main-config-map.yaml
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  main.tf  providers.tf  signoz.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  worker.tf
infrastructure/terraform/.terraform/modules/: modules.json
infrastructure/terraform/eks/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/aws/: .terraform.lock.hcl  main.tf  terraform.tfvars
infrastructure/terraform/environments/aws/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/development/: main.tf  pulsar-values-minikube.yaml
infrastructure/terraform/environments/local/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/local/minikube/: .terraform.lock.hcl  main.tf  providers.tf
infrastructure/terraform/environments/production/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/minikube/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf
infrastructure/terraform/modules/api/: main.tf  providers.tf  variables.tf
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/kubernetes/: main.tf
infrastructure/terraform/modules/models-drive/: main.tf  providers.tf  variables.tf
infrastructure/terraform/modules/pulsar-cluster/: main.tf  providers.tf  pulsar.tf  values-minikube-simple.yaml  values-simple.yaml  variables.tf
infrastructure/terraform/modules/pulsar-setup/: main.tf  providers.tf  pulsar-setup.tf  variables.tf
infrastructure/terraform/modules/signoz/: main.tf  providers.tf
infrastructure/terraform/modules/trino/: main.tf  variables.tf
infrastructure/terraform/modules/worker/: main.tf  variables.tf
infrastructure/terraform/pulsar-setup/: .terraform.lock.hcl  providers.tf  variables.tf
models_drive/: Dockerfile  README.md  download.sh  models.txt
