[project]
name = ""
version = ""
description = ""
authors = [
    {name = "timoangerer", email = "timo.angerer@code.berlin"},
]
dependencies = [
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "fastapi>=0.103.2",
    "pulsar-client[avro]>=3.3.0",
    "python-dotenv>=1.0.0",
    "trino>=0.327.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn --app-dir=src main:app --reload"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.1",
    "autopep8>=2.0.4",
    "pytest>=7.4.2",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
