[project]
name = ""
version = ""
description = ""
authors = [
    {name = "timoangerer", email = "timo.angerer@code.berlin"},
]
dependencies = [
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "fastapi>=0.103.2",
    "pydantic-settings>=2.0.3",
    "pulsar-client>=3.3.0",
    "fastavro>=1.9.0",
    "trino>=0.327.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
requires-python = "==3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn --app-dir=src main:app"
dev = "uvicorn --app-dir=src main:app --reload"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.1",
    "autopep8>=2.0.4",
    "pytest>=7.4.2",
    "httpx>=0.25.0",
    "Faker>=19.12.1",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
