[project]
name = ""
version = ""
description = ""
authors = [
    {name = "timoangerer", email = "timo.angerer@code.berlin"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.1",
    "boto3>=1.28.62",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "opentelemetry-instrumentation-logging>=0.42b0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-api>=1.21.0",
    "pulsar-client>=3.3.0",
    "fastavro>=1.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python src/main.py"
test = "pytest -s"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.1",
    "autopep8>=2.0.4",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
