[project]
name = "infra_tests"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "timoangerer", email = "timo.angerer@code.berlin"},
]
dependencies = [
    "pytest>=7.4.4",
    "requests>=2.31.0",
    "locust>=2.20.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
